website/src/content/v8/pages/api/methods.mdx
export const metadata = {
  title: 'Methods',
  description: `Learn how to use Embla Carousel methods to build custom controls and extend functionality.`,
  order: 20
}

import { TABS_LIBRARY } from '@/utils/tabs'

import callingMethods_module_01 from '@/content/v8/code-snippets/api/methods/calling-methods-vanilla-01.js'
import callingMethods_html_01 from '@/content/v8/code-snippets/api/methods/calling-methods-vanilla-01.html'
import callingMethods_react_01 from '@/content/v8/code-snippets/api/methods/calling-methods-react-01.jsx'
import callingMethods_vue_01 from '@/content/v8/code-snippets/api/methods/calling-methods-vue-01.vue'
import callingMethods_solid_01 from '@/content/v8/code-snippets/api/methods/calling-methods-solid-01.jsx'
import callingMethods_svelte_01 from '@/content/v8/code-snippets/api/methods/calling-methods-svelte-01.svelte'
import typeScriptMethods_module_01 from '@/content/v8/code-snippets/api/methods/typescript-methods-vanilla-01.ts'
import typeScriptMethods_react_01 from '@/content/v8/code-snippets/api/methods/typescript-methods-react-01.tsx'
import typeScriptMethods_vue_01 from '@/content/v8/code-snippets/api/methods/typescript-methods-vue-01.vue'
import typeScriptMethods_solid_01 from '@/content/v8/code-snippets/api/methods/typescript-methods-solid-01.tsx'
import typeScriptMethods_svelte_01 from '@/content/v8/code-snippets/api/methods/typescript-methods-svelte-01.svelte'

# Methods

Embla Carousel provides a set of methods that let you **extend** and **control** the carousel **programmatically**.

---

## Usage

Methods require an **initialized carousel instance**. They remain accessible while the instance is active and are invalid after calling [`destroy`](#destroy).

### Calling methods

In the following example, the [`slideNodes`](#slidenodes) method is called and logged to the console as soon as the carousel has been initialized:

<Tabs groupId={TABS_LIBRARY.GROUP_ID}>
  <TabsItem tab={TABS_LIBRARY.TABS.VANILLA}>
    <PrismHighlight
      language="js"
      code={callingMethods_module_01}
      highlight="8"
    />
    <PrismHighlight language="html" code={callingMethods_html_01} />
  </TabsItem>
  <TabsItem tab={TABS_LIBRARY.TABS.REACT}>
    <PrismHighlight
      language="jsx"
      code={callingMethods_react_01}
      highlight="9"
    />
  </TabsItem>
  <TabsItem tab={TABS_LIBRARY.TABS.VUE}>
    <PrismHighlight
      language="html"
      code={callingMethods_vue_01}
      highlight="11"
    />
  </TabsItem>
  <TabsItem tab={TABS_LIBRARY.TABS.SOLID}>
    <PrismHighlight
      language="jsx"
      code={callingMethods_solid_01}
      highlight="10"
    />
  </TabsItem>
  <TabsItem tab={TABS_LIBRARY.TABS.SVELTE}>
    <PrismHighlight
      language="svelte"
      code={callingMethods_svelte_01}
      highlight="8"
    />

    <Admonition type="note">
      **Note:** Starting with Svelte 5, the `on:` event handlers have been
      deprecated. However, `on:emblainit` will remain for backward
      compatibility.
    </Admonition>

  </TabsItem>
</Tabs>

### TypeScript

The `EmblaCarouselType` is obtained directly from the **core package** `embla-carousel` and used like so:

<Tabs groupId={TABS_LIBRARY.GROUP_ID}>
  <TabsItem tab={TABS_LIBRARY.TABS.VANILLA}>
    <PrismHighlight
      language="js"
      asLanguage="ts"
      code={typeScriptMethods_module_01}
      highlight="1,8"
    />
    <PrismHighlight language="html" code={callingMethods_html_01} />
  </TabsItem>
  <TabsItem tab={TABS_LIBRARY.TABS.REACT}>
    <PrismHighlight
      language="tsx"
      code={typeScriptMethods_react_01}
      highlight="2,8"
    />
    <Admonition type="warning">
      If you're using `pnpm`, you need to install `embla-carousel` as a
      **devDependency** when importing types from it like demonstrated above.
      <br />
      This is because even though `embla-carousel-react` has `embla-carousel` as
      a dependency, `pnpm` makes nested dependencies inaccessible by design.
    </Admonition>
  </TabsItem>
  <TabsItem tab={TABS_LIBRARY.TABS.VUE}>
    <PrismHighlight
      language="html"
      code={typeScriptMethods_vue_01}
      highlight="3,8"
    />
    <Admonition type="warning">
      If you're using `pnpm`, you need to install `embla-carousel` as a
      **devDependency** when importing types from it like demonstrated above.
      <br />
      This is because even though `embla-carousel-vue` has `embla-carousel` as a
      dependency, `pnpm` makes nested dependencies inaccessible by design.
    </Admonition>
  </TabsItem>
  <TabsItem tab={TABS_LIBRARY.TABS.SOLID}>
    <PrismHighlight
      language="tsx"
      code={typeScriptMethods_solid_01}
      highlight="2,8"
    />
    <Admonition type="warning">
      If you're using `pnpm`, you need to install `embla-carousel` as a
      **devDependency** when importing types from it like demonstrated above.
      <br />
      This is because even though `embla-carousel-solid` has `embla-carousel` as
      a dependency, `pnpm` makes nested dependencies inaccessible by design.
    </Admonition>
  </TabsItem>
  <TabsItem tab={TABS_LIBRARY.TABS.SVELTE}>
    <PrismHighlight
      language="svelte"
      code={typeScriptMethods_svelte_01}
      highlight="2,5,8"
    />
    <Admonition type="note">
      **Note:** Starting with Svelte 5, the `on:` event handlers have been
      deprecated. However, `on:emblainit` will remain for backward
      compatibility.
    </Admonition>
    <Admonition type="warning">
      If you're using `pnpm`, you need to install `embla-carousel` as a
      **devDependency** when importing types from it like demonstrated above.
      <br />
      This is because even though `embla-carousel-svelte` has `embla-carousel`
      as a dependency, `pnpm` makes nested dependencies inaccessible by design.
    </Admonition>
  </TabsItem>
</Tabs>

## Reference

Below follows an exhaustive **list of all** Embla Carousel **methods** with their respective parameters and return values.

---

### rootNode

<ApiMetaData
  firstRow={['Parameters', 'none']}
  secondRow={['Returns', 'HTMLElement']}
/>
<PrismHighlight language="ts" hideLabel code={`emblaApi.rootNode()`} />

Get the root node that holds the scroll container with slides inside. This method can be useful when you need to manipulate the root element dynamically or similar.

---

### containerNode

<ApiMetaData
  firstRow={['Parameters', 'none']}
  secondRow={['Returns', 'HTMLElement']}
/>
<PrismHighlight language="ts" hideLabel code={`emblaApi.containerNode()`} />

Get the container node that holds the slides. This method can be useful when you need to manipulate the container element dynamically or similar.

---

### slideNodes

<ApiMetaData
  firstRow={['Parameters', 'none']}
  secondRow={['Returns', 'HTMLElement[]']}
/>
<PrismHighlight language="ts" hideLabel code={`emblaApi.slideNodes()`} />

Get all the slide nodes inside the container. This method can be useful when you need to manipulate the slide elements dynamically or similar.

---

### scrollNext

<ApiMetaData
  firstRow={['Parameters', '(jump?: boolean)']}
  secondRow={['Returns', 'void']}
/>
<PrismHighlight
  language="ts"
  hideLabel
  code={`emblaApi.scrollNext(true | false)`}
/>

Scroll to the next snap point if possible. When [`loop`](/docs/v8/api/options/#loop) is disabled and the carousel has reached the last snap point, this method won't do anything. Set the **jump** parameter to `true` when you want to go to the next slide instantly.

---

### scrollPrev

<ApiMetaData
  firstRow={['Parameters', '(jump?: boolean)']}
  secondRow={['Returns', 'void']}
/>
<PrismHighlight
  language="ts"
  hideLabel
  code={`emblaApi.scrollPrev(true | false)`}
/>

Scroll to the previous snap point if possible. When [`loop`](/docs/v8/api/options/#loop) is disabled and the carousel has reached the first snap point, this method won't do anything. Set the **jump** parameter to `true` when you want to go to the previous slide instantly.

---

### scrollTo

<ApiMetaData
  firstRow={['Parameters', '(index: number, jump?: boolean)']}
  secondRow={['Returns', 'void']}
/>
<PrismHighlight
  language="ts"
  hideLabel
  code={`emblaApi.scrollTo(0, true | false)`}
/>

Scroll to a snap point by its unique index. If [`loop`](/docs/v8/api/options/#loop) is enabled, Embla Carousel will choose the closest way to the target snap point. Set the **jump** parameter to `true` when you want to go to the desired slide instantly.

---

### canScrollNext

<ApiMetaData
  firstRow={['Parameters', 'none']}
  secondRow={['Returns', 'boolean']}
/>
<PrismHighlight language="ts" hideLabel code={`emblaApi.canScrollNext()`} />

Check the possiblity to scroll to a next snap point. If [`loop`](/docs/v8/api/options/#loop) is enabled and the container holds any slides, this will always return `true`.

---

### canScrollPrev

<ApiMetaData
  firstRow={['Parameters', 'none']}
  secondRow={['Returns', 'boolean']}
/>
<PrismHighlight language="ts" hideLabel code={`emblaApi.canScrollPrev()`} />

Check the possiblity to scroll to a previous snap point. If [`loop`](/docs/v8/api/options/#loop) is enabled and the container holds any slides, this will always return `true`.

---

### selectedScrollSnap

<ApiMetaData
  firstRow={['Parameters', 'none']}
  secondRow={['Returns', 'number']}
/>
<PrismHighlight
  language="ts"
  hideLabel
  code={`emblaApi.selectedScrollSnap()`}
/>

Get the index of the selected snap point.

---

### previousScrollSnap

<ApiMetaData
  firstRow={['Parameters', 'none']}
  secondRow={['Returns', 'number']}
/>
<PrismHighlight
  language="ts"
  hideLabel
  code={`emblaApi.previousScrollSnap()`}
/>

Get the index of the previously selected snap point.

---

### scrollSnapList

<ApiMetaData
  firstRow={['Parameters', 'none']}
  secondRow={['Returns', 'number[]']}
/>
<PrismHighlight language="ts" hideLabel code={`emblaApi.scrollSnapList()`} />

Get an array containing all the snap point positions. Each position represents how far the carousel needs to progress in order to reach this position.

---

### scrollProgress

<ApiMetaData
  firstRow={['Parameters', 'none']}
  secondRow={['Returns', 'number']}
/>
<PrismHighlight language="ts" hideLabel code={`emblaApi.scrollProgress()`} />

Check how far the carousel has scrolled of its scrollable length from 0 - 1. For example, **0.5 equals 50%**. For example, this can be useful when creating a scroll progress bar.

---

### slidesInView

<ApiMetaData
  firstRow={['Parameters', 'none']}
  secondRow={['Returns', 'number[]']}
/>
<PrismHighlight language="ts" hideLabel code={`emblaApi.slidesInView()`} />

Get slide indexes **visible** in the carousel viewport. Honors the [`inViewThreshold`](/docs/v8/api/options/#inviewthreshold) option.

---

### slidesNotInView

<ApiMetaData
  firstRow={['Parameters', 'none']}
  secondRow={['Returns', 'number[]']}
/>
<PrismHighlight language="ts" hideLabel code={`emblaApi.slidesNotInView()`} />

Get slide indexes **not visible** in the carousel viewport. Honors the [`inViewThreshold`](/docs/v8/api/options/#inviewthreshold) option.

---

### internalEngine

<ApiMetaData
  firstRow={['Parameters', 'none']}
  secondRow={['Returns', 'EmblaEngineType']}
/>
<PrismHighlight language="ts" hideLabel code={`emblaApi.internalEngine()`} />

Exposes almost all internal functionality used by Embla. Useful when creating plugins or similar.

<Admonition type="note">
  **Note:** Please **refrain** from creating **bug reports** related to this
  method. If you're using this and running into problems, it's a 99.8% chance
  that you don't understand how this works. Use at your own risk.
</Admonition>

---

### reInit

<ApiMetaData
  firstRow={[
    'Parameters',
    '(options?: EmblaOptionsType, plugins?: EmblaPluginType[])'
  ]}
  secondRow={['Returns', 'void']}
/>
<PrismHighlight
  language="ts"
  hideLabel
  code={`emblaApi.reInit({ loop: false }, [Autoplay()])`}
/>

Hard reset the carousel after it has been initialized. This method allows for changing [`options`](/docs/v8/api/options) and [`plugins`](/docs/v8/api/plugins) after initializing a carousel.

<Admonition type="note">
  **Note:** Passed options will be **merged** with current options, but passed
  plugins will **replace** current plugins.
</Admonition>

---

### plugins

<ApiMetaData
  firstRow={['Parameters', 'none']}
  secondRow={['Returns', 'EmblaPluginsType']}
/>
<PrismHighlight language="ts" hideLabel code={`emblaApi.plugins()`} />

Returns an object with key value pairs where the keys are the plugin names, and the plugin API:s are the values.

---

### destroy

<ApiMetaData
  firstRow={['Parameters', 'none']}
  secondRow={['Returns', 'void']}
/>
<PrismHighlight language="ts" hideLabel code={`emblaApi.destroy()`} />

Destroy the carousel instance permanently. This is a one way operation and is intended to be used as a cleanup measure when the carousel instance isn't needed anymore.

---

### on

<ApiMetaData
  firstRow={[
    'Parameters',
    '(event: EmblaEventType, callback: EmblaEventCallbackType)'
  ]}
  secondRow={['Returns', 'void']}
/>
<PrismHighlight
  language="ts"
  hideLabel
  code={`emblaApi.on('select', (emblaApi, event) => {})`}
/>

**Subscribe** to an Embla specific [`event`](/docs/v8/api/events) with a **callback**. Added event listeners will persist even if [`reInit`](/docs/v8/api/methods/#reinit) is called, either until the carousel is destroyed or the event is removed with the [`off`](/docs/v8/api/methods/#off) method.

---

### off

<ApiMetaData
  firstRow={[
    'Parameters',
    '(event: EmblaEventType, callback: EmblaEventCallbackType)'
  ]}
  secondRow={['Returns', 'void']}
/>
<PrismHighlight
  language="ts"
  hideLabel
  code={`emblaApi.off('select', (emblaApi, event) => {})`}
/>

**Unsubscribe** from an Embla specific [`event`](/docs/v8/api/events) . Make sure to pass the **same callback reference** when the callback was added with the [`on`](/docs/v8/api/methods/#on) method.

---

### emit

<ApiMetaData
  firstRow={['Parameters', '(event: EmblaEventType)']}
  secondRow={['Returns', 'void']}
/>
<PrismHighlight language="ts" hideLabel code={`emblaApi.emit('select')`} />

Emits an embla [`event`](/docs/v8/api/events). This doesn't trigger any internal Embla functionality.

---
